# SomaAI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml  run.sh  todo.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  implementation_task.yml
.github/workflows/: ci.yml  release.yml  security.yml
docker/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md
docs/adr/: 0001-initial-architecture.md
scripts/: dev.sh  init_db.py  lint.sh  seed_meta.py
src/somaai/: __init__.py  app.py  deps.py  exceptions.py  health.py  logging_conf.py  main.py  middleware.py  settings.py
src/somaai/api/: router.py
src/somaai/api/v1/: router.py
src/somaai/api/v1/endpoints/: admin.py  chat.py  docs.py  feedback.py  ingest.py  meta.py  retrieval.py
src/somaai/cache/: __init__.py  config.py  decorators.py  semantic.py  session.py
src/somaai/contracts/: chat.py  common.py  docs.py  feedback.py  jobs.py  meta.py  quiz.py  teacher.py
src/somaai/db/: base.py  models.py  session.py
src/somaai/db/migrations/: env.py
src/somaai/db/migrations/versions/: 11c48db71fbd_initial_schema.py  8f21006b8d2f_add_actor_id_and_updated_at_to_feedback.py  b021de2002f5_add_grades_and_subjects_tables.py  fd5cd1a7fa49_add_user_role_to_feedback.py
src/somaai/modules/chat/: router.py  schemas.py  service.py
src/somaai/modules/docs/: service.py
src/somaai/modules/feedback/: service.py
src/somaai/modules/ingest/: pipeline.py  router.py  schemas.py  service.py
src/somaai/modules/knowledge/: chunking.py  embeddings.py  vectorstore.py
src/somaai/modules/knowledge/stores/: chroma.py  pgvector.py  qdrant.py
src/somaai/modules/meta/: service.py
src/somaai/modules/rag/: evaluation.py  generator.py  pipelines.py  prompts.py  reranker.py  retriever.py
src/somaai/modules/telemetry/: events.py  metrics.py  tracing.py
src/somaai/modules/users/: router.py  schemas.py  service.py
src/somaai/providers/: llm.py  speech.py  storage.py
src/somaai/tests/: conftest.py  test_feedback.py  test_health.py  test_meta.py
src/somaai/tests/rag/: .gitkeep
src/somaai/utils/: files.py  ids.py  time.py
