[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somaai"
version = "0.1.0"
description = "SomaAI - Intelligent AI Assistant"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SomaAI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]
cache = [
    "redis>=5.0.0",
    "aiocache[redis]>=0.12.0",
    "gptcache>=0.1.40",
]
vectordb = [
    "qdrant-client>=1.7.0",
]
pdf = [
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
]
all = [
    "somaai[cache,vectordb,pdf]",
]

[project.urls]
Homepage = "https://github.com/Rwanda-AI-Network/SomaAI"
Repository = "https://github.com/Rwanda-AI-Network/SomaAI"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
# Relaxed for stub implementations - enable strict when implementing
strict = false
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
# Allow stub implementations with pass
disable_error_code = ["empty-body", "union-attr"]

[[tool.mypy.overrides]]
module = "somaai.tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/somaai/tests"]
